fixed overflow

--- a/css/contact.css
+++ b/css/contact.css
@@ -111,6 +111,7 @@
     color: white;
     font-size: 20px;
     /* border: none; */
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
