--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* Prevent scrolling on the whole page */
 }
 
@@ -55,7 +55,7 @@ body {
 }
 
 #root {
-  height: 100vh;
+  /* height: 100vh; */
   background-color: #00040e;
   background-color: #212428;
   /* background-color: #e3ecff;
@@ -72,7 +72,7 @@ body {
 
 
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 #footer{
@@ -122,7 +122,8 @@ body {
 
 @media screen and (max-width: 768px) {
   #root {
-    overflow: hidden;
+    /* overflow: hidden; */
+    overflow-x: hidden;
   }
 
   #root::before {
