--- a/css/projects.css
+++ b/css/projects.css
@@ -43,7 +43,7 @@
     gap: 150px;
     position: relative;
 
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
 
     width: 100%; /* Full width */
     height: 100%; /* Full height */
@@ -104,7 +104,7 @@
     .project-containers{
         max-width: 100%; /* Smaller width on smaller screens */
         padding: 15px;
-        padding-bottom: 100px;
+        /* padding-bottom: 100px; */
     }
 
     .project-container{
